Add RabbitMQ. Add temp and humidity in stream data

--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
     "@improbable-eng/grpc-web": "^0.15.0",
     "google-protobuf": "^3.21.4",
     "keycloak-js": "^26.2.0"
+  },
+  "devDependencies": {
+    "@bufbuild/protoc-gen-connect-es": "^0.13.0",
+    "@bufbuild/protoc-gen-es": "^1.10.1",
+    "ts-proto": "^2.7.7"
   }
 }
