--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,12 +111,17 @@ services:
       - GRPC_PORT=${GRPC_PORT}
       - REST_PORT=${REST_PORT}
       - REDIS_ADDR=${REDIS_ADDR}
+      - RABBITMQ_USER=myuser444
+      - RABBITMQ_PASS=mypass444
+      - RABBITMQ_URL=amqp://myuser444:mypass444@rabbitmq:5672/
     depends_on:
       mysql:
         condition: service_healthy
       redis:
         condition: service_healthy
       keycloak: 
+        condition: service_healthy
+      rabbitmq:
         condition: service_healthy
     volumes:
       - ./storm-backend:/app
@@ -132,8 +137,13 @@ services:
       - REDIS_PORT=${REDIS_PORT}
       - OPENWEATHER_API_KEY=${OPENWEATHER_API_KEY}
       - REGIONS=${REGIONS}
+      - RABBITMQ_USER=myuser444
+      - RABBITMQ_PASS=mypass444
+      - RABBITMQ_URL=amqp://myuser444:mypass444@rabbitmq:5672/
     depends_on:
       redis:
+        condition: service_healthy
+      rabbitmq:
         condition: service_healthy
     volumes:
       - ./weather-worker:/app
@@ -172,6 +182,26 @@ services:
       - backend
       - keycloak
     command: -c /etc/envoy/envoy.yaml
+    networks:
+      - storm-network
+  
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: storm-rabbitmq
+    restart: unless-stopped
+    ports:
+      - "5672:5672"  # AMQP
+      - "15672:15672"  # Management UI
+    environment:
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER:-guest}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASS:-guest}
+      - RABBITMQ_DEFAULT_VHOST=/
+      - RABBITMQ_URL=amqp://${RABBITMQ_USER}:${RABBITMQ_PASS}@rabbitmq:5672/
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     networks:
       - storm-network
 
