--- a/envoy.yaml
+++ b/envoy.yaml
@@ -36,13 +36,13 @@ static_resources:
                             timeout: 60s
                         # Маршрут для backend REST API
                         - match:
-                            prefix: "/v1/"
+                            prefix: "/v1/storm/updates"
                           route:
                             cluster: backend_rest_cluster
                             timeout: 60s
                         # Маршрут для gRPC-Web (включая путь StormService)
                         - match:
-                            prefix: "/proto.StormService/"
+                            prefix: "/stormhunter.StormService/"
                           route:
                             cluster: backend_grpc_cluster
                             max_stream_duration:
@@ -56,14 +56,14 @@ static_resources:
                             max_stream_duration:
                               max_stream_duration: 0s
                               
-                      cors:
+                      cors: 
                         allow_origin_string_match:
                           - safe_regex:
                               google_re2: {}
                               regex: "^http://localhost:3000$"
                         allow_methods: "GET, POST, OPTIONS"
-                        allow_headers: "Authorization, Content-Type, x-grpc-web, x-user-agent"
-                        expose_headers: "grpc-status, grpc-message"
+                        allow_headers: "Authorization, Content-Type, x-grpc-web, X-Grpc-Web, x-user-agent, X-User-Agent, grpc-timeout, x-requested-with, connect-protocol-version"
+                        expose_headers: "grpc-status, grpc-message, Grpc-Status, Grpc-Message, Grpc-Encoding, Grpc-Accept-Encoding"
                         max_age: "1728000"
                         allow_credentials: true  
 
